Changing color theme

--- a/frontend/assets/stylus/main.styl
+++ b/frontend/assets/stylus/main.styl
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300)
 
-theme_dark = #0a4f7d
-theme_light = #41799c
+theme_dark = #d6a4a4
+theme_light = #dae2f8
 
 body
   background theme_dark
@@ -13,7 +13,7 @@ body
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing grayscale
 
-h1, h3
+h1, h3, h4
   color #fff
   text-align center
 
@@ -153,7 +153,7 @@ input
       height 200px
       justify-content center
       align-items center
-      background-color #9CCC65
+      background-color #ffb3ba
 
       p
         font-size 25px
