Simple validation of flashcards form

--- a/frontend/assets/stylus/main.styl
+++ b/frontend/assets/stylus/main.styl
@@ -112,6 +112,7 @@ input
 
     button
       margin 5px
+      height 50px
 
     .save-btn, .add-btn
       text-align right
@@ -262,5 +263,19 @@ input
   left 0
   background rgba(0,0,0,0.7)
   z-index 5
-  width 100%;
+  width 100%
   height 100%
+
+.input-error
+  background-color theme_dark
+  margin 5px
+  margin-top -5px
+  color #fff
+  padding 2px
+  font-weight 700
+
+.name-error
+  width 765px
+
+.front-back-error
+  width 350px
