Adding input to search for flashcard sets

--- a/frontend/assets/stylus/main.styl
+++ b/frontend/assets/stylus/main.styl
@@ -280,3 +280,20 @@ input
 
 .front-back-error
   width 350px
+
+.search-bar
+  position relative
+  width 50%
+  margin 3rem auto 0
+
+  input
+    width 100%
+    margin 0
+
+  .glyphicon-search
+    position absolute
+    font-size 20px
+    top 15px
+    right 15px
+    z-index 1
+    color #757575
